[package]
name = "nomic"
version = "0.2.1"
authors = [ "The Nomic Team <hello@nomic.io>" ]
edition = "2018"

[dependencies]
abci2-rs = { path = "../abci2-rs", version = "0.1.0", branch="master" }
base64 = "0.12.0"
bech32 = "0.7.2"
bincode = "1.2.1"
bitcoin = { version = "0.23.0", features = [ "use-serde" ] }
bitcoin-script = "0.1.1"
bitcoincore-rpc = "0.9.0"
blocking = "0.4.7"
byteorder = "1.3.2"
clap = { git = "https://github.com/clap-rs/clap/" }
colored = "1.9.3"
dirs = "2.0.2"
ed = "0.1.6"
failure = "=0.1.8"
hex = "0.4.2"
hex-literal = "0.2.1"
is_executable = "0.1.2"
lazy_static = "1.4.0"
log = "0.4.8"
merk = { git = "https://github.com/nomic-io/merk", rev = "114f5a2415bb2ce5e51501d4eb2a56e5726708a6" }
orga = { path = "../orga" , version="0.1.11", branch = "feature/tm-0.34.x", features = [ "merk", "abci" ] }
pretty_env_logger = "0.4.0"
rand = "=0.6"
reqwest = { version = "0.10.3", features = [ "blocking", "json" ] }
rocket = "0.4.6"
secp256k1 = { version = "=0.17.2", features = [ "rand" ] }
serde = { version = "1.0.124", features = [ "derive" ] }
serde_derive = "1.0.124"
serde_json = "1.0.64"
sha2 = "0.8.1"
simple-server = "0.4.0"
tendermint = "0.18.1"
tendermint-rpc = { version = "0.18.1", features = ["http-client"] }
tendermint-proto = "0.18.1"
zip = "0.5.5"

[dev-dependencies]
protobuf = "2.10.1"

[[bin]]
name = "nomic-cli"
path = "src/bin/main.rs"
